--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PulseHub - 社交媒体热点聚合</title>
+    <title>PulseHub - Social Media Hot Topics Aggregation</title>
   </head>
   <body>
     <div id="root"></div>
